--- a/src/animalList/AnimalList.fxml
+++ b/src/animalList/AnimalList.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TextField layoutX="27.0" layoutY="25.0" promptText="Search..." />
       <Button layoutX="224.0" layoutY="25.0" mnemonicParsing="false" text="Go" />
@@ -28,5 +27,6 @@
             </TableView>
          </children>
       </Pane>
+      <Button fx:id="returnToMain" layoutX="341.0" layoutY="25.0" mnemonicParsing="false" text="Return to Main Menu" />
    </children>
 </AnchorPane>
