--- a/src/mainScreen/AnimalAdoptMainScreen.fxml
+++ b/src/mainScreen/AnimalAdoptMainScreen.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainScreen.MainScreenController">
   <children>
-    <Button fx:id="viewAnimalList" layoutX="62.0" layoutY="220.0" mnemonicParsing="false" onAction="#goToAnimalList" text="View Employee Logs" />
+    <Button fx:id="viewAnimalList" layoutX="62.0" layoutY="220.0" mnemonicParsing="false" onAction="#goToAnimalList" text="View List of Animals" />
     <Label layoutX="267.0" layoutY="46.0" text="Welcome!" />
     <Button layoutX="108.0" layoutY="169.0" mnemonicParsing="false" text="Go" />
     <TextField layoutX="49.0" layoutY="133.0" promptText="Search" />
