--- a/src/adoptionPage/AdoptionPage.fxml
+++ b/src/adoptionPage/AdoptionPage.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="429.0" prefWidth="326.0" xmlns="http://javafx.com/javafx/8.0.191" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionPage.AdoptionPageController">
+<AnchorPane prefHeight="429.0" prefWidth="326.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionPage.AdoptionPageController">
    <children>
       <Button fx:id="returnBtn" layoutX="97.0" layoutY="23.0" mnemonicParsing="false" onAction="#returnToMenu" text="Return To main Menu" />
       <GridPane layoutX="20.0" layoutY="105.0" prefHeight="101.0" prefWidth="286.0">
@@ -112,7 +111,7 @@
                   <Font name="Times New Roman Bold" size="16.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Text fx:id="userDOBText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
