--- a/src/mainScreen/AnimalAdoptMainScreen.fxml
+++ b/src/mainScreen/AnimalAdoptMainScreen.fxml
@@ -5,17 +5,22 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.191" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainScreen.MainScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+  prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.191"
+  xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainScreen.MainScreenController">
   <children>
-    <Button fx:id="viewAnimalList" layoutX="62.0" layoutY="220.0" mnemonicParsing="false" onAction="#goToAnimalList" text="View List of Animals" />
-    <Label layoutX="267.0" layoutY="46.0" text="Welcome!" />
-    <Button layoutX="108.0" layoutY="169.0" mnemonicParsing="false" text="Go" />
-    <TextField layoutX="49.0" layoutY="133.0" promptText="Search" />
-    <Label layoutX="66.0" layoutY="112.0" text="Search for an Animal:" />
-    <Button layoutX="410.0" layoutY="108.0" mnemonicParsing="false" text="View Events" />
-    <Button layoutX="400.0" layoutY="169.0" mnemonicParsing="false" text="Ask a Question" />
-    <Button layoutX="387.0" layoutY="232.0" mnemonicParsing="false" text="Apply to Volunteer" />
-    <Button fx:id="logsBtn" disable="true" layoutX="222.0" layoutY="318.0" mnemonicParsing="false" text="View Employee Logs" />
+    <Button fx:id="viewAnimalList" layoutX="62.0" layoutY="220.0" mnemonicParsing="false"
+      onAction="#goToAnimalList" text="View List of Animals"/>
+    <Label layoutX="267.0" layoutY="46.0" text="Welcome!"/>
+    <Button layoutX="108.0" layoutY="169.0" mnemonicParsing="false" text="Go"/>
+    <TextField layoutX="49.0" layoutY="133.0" promptText="Search"/>
+    <Label layoutX="66.0" layoutY="112.0" text="Search for an Animal:"/>
+    <Button layoutX="410.0" layoutY="108.0" mnemonicParsing="false" text="View Events"/>
+    <Button layoutX="400.0" layoutY="169.0" mnemonicParsing="false" text="Ask a Question"/>
+    <Button layoutX="387.0" layoutY="232.0" mnemonicParsing="false" onAction="#goToApplyForVolunteer"
+      text="Apply to Volunteer"/>
+    <Button fx:id="logsBtn" disable="true" layoutX="222.0" layoutY="318.0" mnemonicParsing="false"
+      text="View Employee Logs"/>
 
   </children>
 </AnchorPane>
