--- a/src/employeedashboard/EmployeeDashboard.fxml
+++ b/src/employeedashboard/EmployeeDashboard.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -12,53 +16,39 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-  prefHeight="450.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE"
-  xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-  fx:controller="employeedashboard.EmployeeDashboardController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" stylesheets="@../mainCSS.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="employeedashboard.EmployeeDashboardController">
   <tabs>
     <Tab text="Main">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
           <children>
-            <SplitPane dividerPositions="0.12200956937799043" layoutY="1.0"
-              maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-              minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="420.0"
-              prefWidth="600.0">
+            <SplitPane dividerPositions="0.12200956937799043" layoutY="1.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="420.0" prefWidth="600.0">
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="598.0">
                   <children>
-                    <Label fx:id="dashLoginLbl" layoutX="58.0" layoutY="16.0"
-                      stylesheets="@../login/LoginStyle.css" text="Welcome!"/>
-                    <Label fx:id="userStatusLbl" layoutX="387.0" layoutY="16.0"
-                      stylesheets="@../login/LoginStyle.css" text="Status">
+                    <Label fx:id="dashLoginLbl" layoutX="58.0" layoutY="16.0" stylesheets="@../login/LoginStyle.css" text="Welcome!" />
+                    <Label fx:id="userStatusLbl" layoutX="387.0" layoutY="16.0" stylesheets="@../login/LoginStyle.css" text="Status">
                       <font>
-                        <Font name="System Bold" size="12.0"/>
+                        <Font name="System Bold" size="12.0" />
                       </font>
                     </Label>
                   </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                   <children>
-                    <Button fx:id="viewAnimalBtn" layoutX="187.0" layoutY="70.0"
-                      mnemonicParsing="false" prefHeight="48.0" prefWidth="225.0"
-                      text="View Animals">
+                    <Button fx:id="viewAnimalBtn" layoutX="187.0" layoutY="70.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="225.0" text="View Animals">
                       <font>
-                        <Font size="20.0"/>
+                        <Font size="20.0" />
                       </font>
                     </Button>
-                    <Button fx:id="viewEventsBtn" layoutX="187.0" layoutY="158.0"
-                      mnemonicParsing="false" prefHeight="48.0" prefWidth="225.0"
-                      onAction="#goToEventsPage" text="View Events">
+                    <Button fx:id="viewEventsBtn" layoutX="187.0" layoutY="158.0" mnemonicParsing="false" onAction="#goToEventsPage" prefHeight="48.0" prefWidth="225.0" text="View Events">
                       <font>
-                        <Font size="20.0"/>
+                        <Font size="20.0" />
                       </font>
                     </Button>
-                    <Button fx:id="recordHoursBtn" layoutX="187.0" layoutY="249.0"
-                      mnemonicParsing="false" prefHeight="48.0" prefWidth="225.0"
-                      onAction="#goToRecordLog" text="Record Hours">
+                    <Button fx:id="recordHoursBtn" layoutX="187.0" layoutY="249.0" mnemonicParsing="false" onAction="#goToRecordLog" prefHeight="48.0" prefWidth="225.0" text="Record Hours">
                       <font>
-                        <Font size="20.0"/>
+                        <Font size="20.0" />
                       </font>
                     </Button>
                   </children>
@@ -79,17 +69,12 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                       <children>
-                        <ListView fx:id="unanwQuestionList" layoutX="16.0" layoutY="37.0"
-                          prefHeight="274.0" prefWidth="569.0"/>
-                        <TextField fx:id="answerQuestionTxtBox" alignment="TOP_LEFT" layoutX="16.0"
-                          layoutY="323.0" prefHeight="58.0" prefWidth="408.0"
-                          promptText="Answer questions here"/>
-                        <Button fx:id="answerBtn" layoutX="469.0" layoutY="334.0"
-                          mnemonicParsing="false" onAction="#answerQuestion" prefHeight="37.0"
-                          prefWidth="61.0" text="Answer"/>
+                        <ListView fx:id="unanwQuestionList" layoutX="16.0" layoutY="37.0" prefHeight="274.0" prefWidth="569.0" />
+                        <TextField fx:id="answerQuestionTxtBox" alignment="TOP_LEFT" layoutX="16.0" layoutY="323.0" prefHeight="58.0" prefWidth="408.0" promptText="Answer questions here" />
+                        <Button fx:id="answerBtn" layoutX="469.0" layoutY="334.0" mnemonicParsing="false" onAction="#answerQuestion" prefHeight="37.0" prefWidth="61.0" text="Answer" />
                         <Label layoutX="197.0" layoutY="5.0" text="Unanswered Questions">
                           <font>
-                            <Font size="18.0"/>
+                            <Font size="18.0" />
                           </font>
                         </Label>
                       </children>
@@ -100,13 +85,9 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                       <children>
-                        <ListView fx:id="ans" layoutX="12.0" layoutY="14.0"
-                          onMouseClicked="#requestAnswer" prefHeight="284.0" prefWidth="576.0"/>
-                        <Text fx:id="answerTxt" layoutX="65.0" layoutY="347.0" strokeType="OUTSIDE"
-                          strokeWidth="0.0" text="Answer here." wrappingWidth="470.0"/>
-                        <Text fx:id="answerAuthorTxt" layoutX="65.0" layoutY="320.0"
-                          strokeType="OUTSIDE" strokeWidth="0.0" text="Author here."
-                          wrappingWidth="470.0"/>
+                        <ListView fx:id="ans" layoutX="12.0" layoutY="14.0" onMouseClicked="#requestAnswer" prefHeight="284.0" prefWidth="576.0" />
+                        <Text fx:id="answerTxt" layoutX="65.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Answer here." wrappingWidth="470.0" />
+                        <Text fx:id="answerAuthorTxt" layoutX="65.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author here." wrappingWidth="470.0" />
                       </children>
                     </AnchorPane>
                   </content>
@@ -125,14 +106,12 @@
               <tabs>
                 <Tab text="Untitled Tab 1">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-                      prefWidth="200.0"/>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                   </content>
                 </Tab>
                 <Tab text="Untitled Tab 2">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-                      prefWidth="200.0"/>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                   </content>
                 </Tab>
               </tabs>
@@ -149,14 +128,12 @@
               <tabs>
                 <Tab text="Untitled Tab 1">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-                      prefWidth="200.0"/>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                   </content>
                 </Tab>
                 <Tab text="Untitled Tab 2">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-                      prefWidth="200.0"/>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                   </content>
                 </Tab>
               </tabs>
@@ -169,8 +146,7 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
           <children>
-            <TextArea fx:id="logList" editable="false" layoutX="26.0" layoutY="17.0"
-              prefHeight="387.0" prefWidth="548.0"/>
+            <TextArea fx:id="logList" editable="false" layoutX="26.0" layoutY="17.0" prefHeight="387.0" prefWidth="548.0" />
           </children>
         </AnchorPane>
       </content>
