--- a/src/employeedashboard/EmployeeDashboard.fxml
+++ b/src/employeedashboard/EmployeeDashboard.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -9,12 +10,13 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
   prefHeight="450.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE"
-  xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+  xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
   fx:controller="employeedashboard.EmployeeDashboardController">
   <tabs>
     <Tab text="Main">
@@ -48,15 +50,15 @@
                       </font>
                     </Button>
                     <Button fx:id="viewEventsBtn" layoutX="187.0" layoutY="158.0"
-                      mnemonicParsing="false" prefHeight="48.0" prefWidth="225.0"
-                      onAction="#goToEventsPage" text="View Events">
+                      mnemonicParsing="false" onAction="#goToEventsPage" prefHeight="48.0"
+                      prefWidth="225.0" text="View Events">
                       <font>
                         <Font size="20.0"/>
                       </font>
                     </Button>
                     <Button fx:id="recordHoursBtn" layoutX="187.0" layoutY="249.0"
-                      mnemonicParsing="false" prefHeight="48.0" prefWidth="225.0"
-                      onAction="#goToRecordLog" text="Record Hours">
+                      mnemonicParsing="false" onAction="#goToRecordLog" prefHeight="48.0"
+                      prefWidth="225.0" text="Record Hours">
                       <font>
                         <Font size="20.0"/>
                       </font>
@@ -147,16 +149,48 @@
           <children>
             <TabPane prefHeight="420.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab text="Untitled Tab 1">
+                <Tab text="Unprocessed">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-                      prefWidth="200.0"/>
+                    <VBox prefHeight="200.0" prefWidth="100.0">
+                      <children>
+                        <ListView fx:id="unprocessedVolunteerApplicationsList" prefWidth="200.0">
+                          <VBox.margin>
+                            <Insets/>
+                          </VBox.margin>
+                        </ListView>
+                        <HBox alignment="CENTER_RIGHT" prefWidth="200.0">
+                          <children>
+                            <Button fx:id="volunteerUnprocessedRejectBtn" mnemonicParsing="false"
+                              text="Reject" onAction="#rejectVolunteerRequest">
+                              <HBox.margin>
+                                <Insets right="8.0"/>
+                              </HBox.margin>
+                            </Button>
+                            <Button fx:id="volunteerUnprocessedApproveBtn" mnemonicParsing="false"
+                              text="Approve" onAction="#approveVolunteerRequest">
+                              <HBox.margin>
+                                <Insets/>
+                              </HBox.margin>
+                            </Button>
+                          </children>
+                          <VBox.margin>
+                            <Insets/>
+                          </VBox.margin>
+                          <padding>
+                            <Insets bottom="16.0" right="8.0" top="8.0"/>
+                          </padding>
+                        </HBox>
+                      </children>
+                    </VBox>
                   </content>
                 </Tab>
-                <Tab text="Untitled Tab 2">
+                <Tab text="Processed">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-                      prefWidth="200.0"/>
+                    <VBox prefHeight="200.0" prefWidth="100.0">
+                      <children>
+                        <ListView fx:id="processedVolunteerApplicationsList" prefWidth="200.0"/>
+                      </children>
+                    </VBox>
                   </content>
                 </Tab>
               </tabs>
