--- a/src/employeedashboard/EmployeeDashboard.fxml
+++ b/src/employeedashboard/EmployeeDashboard.fxml
@@ -63,7 +63,7 @@
         </AnchorPane>
       </content>
     </Tab>
-    <Tab text="Questions">
+    <Tab fx:id="questionsTab" text="Questions">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
           <children>
