--- a/src/registeruser/RegisterUser.fxml
+++ b/src/registeruser/RegisterUser.fxml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.shape.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane prefHeight="362.0" prefWidth="463.0" stylesheets="@../mainCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registeruser.RegisterUserController">
    <children>
-      <Line endX="100.0" fill="#ff4343" layoutX="231.0" layoutY="82.0" scaleX="2.0" startX="-100.0" strokeMiterLimit="20.0" strokeWidth="3.0" />
+      <Line endX="100.0" fill="BLACK" layoutX="231.0" layoutY="82.0" scaleX="2.0" startX="-100.0" strokeMiterLimit="20.0" strokeWidth="3.0" />
       <Text layoutX="34.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Register">
          <font>
             <Font size="36.0" />
