--- a/src/customerdashboard/CustomerDashboard.fxml
+++ b/src/customerdashboard/CustomerDashboard.fxml
@@ -2,30 +2,24 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<TitledPane animated="false" collapsible="false" maxHeight="-Infinity" maxWidth="-Infinity"
-  minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-  text="Customer Dashboard" xmlns="http://javafx.com/javafx/8.0.171"
-  xmlns:fx="http://javafx.com/fxml/1" fx:controller="customerdashboard.CustomerDashboardController">
 
-  <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-      <children>
-        <Button fx:id="customerViewAnimalsBtn" layoutX="233.0" layoutY="70.0"
-          mnemonicParsing="false" onAction="#goToAnimalScreen" text="View Animals"/>
-        <Button fx:id="customerViewEventsBtn" layoutX="238.0" layoutY="132.0"
-          mnemonicParsing="false" onAction="#goToEventsScreen" text="View Events"/>
-        <Button fx:id="askQuestionBtn" layoutX="227.0" layoutY="193.0" mnemonicParsing="false"
-          text="Ask a Question"/>
-        <Button fx:id="customerLogOutBtn" layoutX="505.0" layoutY="13.0" mnemonicParsing="false"
-          text="Log out"/>
-        <Button fx:id="applyToVolunteerBtn" layoutX="196.0" layoutY="254.0" mnemonicParsing="false"
-          text="Apply to be a Volunteer!"/>
-        <Label layoutX="21.0" layoutY="14.0" prefHeight="29.0" prefWidth="113.0"
-          text="Welcome, user! "/>
-      </children>
-    </AnchorPane>
-  </content>
-</TitledPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+  prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
+  xmlns:fx="http://javafx.com/fxml/1"
+  fx:controller="customerdashboard.CustomerDashboardController">
+  <children>
+    <Button fx:id="btnViewAnimals" layoutX="115.0" layoutY="77.0" mnemonicParsing="false"
+      onAction="#goToAnimalScreen" text="View Animals"/>
+    <Button fx:id="btnViewEvents" layoutX="115.0" layoutY="130.0" mnemonicParsing="false"
+      onAction="#goToEventsScreen" text="View Events"/>
+    <Button fx:id="btnAskQuestions" layoutX="115.0" layoutY="187.0" mnemonicParsing="false"
+      text="Ask a Question"/>
+    <Button fx:id="btnLogOff" layoutX="115.0" layoutY="242.0" mnemonicParsing="false"
+      text="Log Off"/>
+    <Button fx:id="btnApplyVolunteer" layoutX="115.0" layoutY="296.0" mnemonicParsing="false"
+      onAction="#goToVolunteerApplication" text="Apply to Volunteer"/>
+    <Label fx:id="lblWelcome" layoutX="14.0" layoutY="14.0" text="Welcome User!"/>
+  </children>
+</AnchorPane>
