--- a/src/viewevents/ViewEvents.fxml
+++ b/src/viewevents/ViewEvents.fxml
@@ -3,28 +3,19 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<TitledPane fx:id="viewEventsPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" text="View Events" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <content>
-      <SplitPane fx:id="eventsSplitPane" dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <Button fx:id="eventsBackBtn" layoutX="51.0" layoutY="196.0" mnemonicParsing="false" text="Go Back" />
-                  <Label fx:id="eventsLabel1" layoutX="23.0" layoutY="87.0" text="To the right are our" />
-                  <Label fx:id="eventsLabel2" layoutX="38.0" layoutY="108.0" text="current events!" />
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <ListView fx:id="eventsListView" layoutX="2.0" layoutY="4.0" prefHeight="363.0" prefWidth="412.0" />
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
-   </content>
-</TitledPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+  prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
+  xmlns:fx="http://javafx.com/fxml/1"
+  fx:controller="viewevents.ViewEventsController">
+  <children>
+    <Button fx:id="btnGoBack" layoutX="79.0" layoutY="185.0" mnemonicParsing="false"
+      onAction="#goBack" text="Go Back"/>
+    <Label fx:id="lblTop" layoutX="79.0" layoutY="59.0" text="To the right are our"/>
+    <Label fx:id="lblBottom" layoutX="79.0" layoutY="93.0" text="current events!"/>
+    <ListView fx:id="listViewEvents" layoutX="256.0" layoutY="21.0" prefHeight="358.0"
+      prefWidth="330.0"/>
+  </children>
+</AnchorPane>
