--- a/src/registeruser/RegisterUser.fxml
+++ b/src/registeruser/RegisterUser.fxml
@@ -75,7 +75,7 @@
                   <Insets right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="newUserUserNameTextFld" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <TextField fx:id="newUserUsernameTextFld" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="5.0" />
                </GridPane.margin>
